# verbs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/docs/: developers.md  rust.md
.github/workflows/: build.yaml  build_and_release.yaml  docs.yaml  linting.yaml  pre_merge.yaml  release_build.yaml  test_release.yaml  testing.yaml
contracts/basic_erc20_contract/: basic_erc20.abi  basic_erc20_contract.sol  basic_erc20_params.json
contracts/test_contract/: test_contract.abi  test_contract.sol  test_contract_params.json
core/db/: Cargo.toml
core/db/src/: fork_db.rs  lib.rs  local_db.rs  types.rs
core/fork_evm/: Cargo.toml
core/fork_evm/src/: constants.rs  db.rs  error.rs  fork_db.rs  lib.rs  mod.rs  provider.rs  runtime_client.rs  snapshot.rs  types.rs  utils.rs
core/macros/src/: lib.rs
core/rust_sim/: Cargo.toml
core/rust_sim/examples/basic_sim/: main.rs  state.rs
core/rust_sim/examples/basic_sim/basic_erc20_contract/: basic_erc20.abi
core/rust_sim/examples/forked_sim/: dai_abi.rs  main.rs
core/rust_sim/src/: lib.rs  sim_runner.rs  utils.rs
core/rust_sim/src/agent/: agent_vec.rs  mod.rs  singleton_agent.rs  traits.rs
core/rust_sim/src/contract/: structs.rs
core/rust_sim/src/network/: mod.rs  utils.rs
crates/verbs_db/: Cargo.toml
crates/verbs_db/src/: fork_db.rs  lib.rs  runtime_client.rs  types.rs
crates/verbs_macros/: Cargo.toml
crates/verbs_macros/src/: lib.rs  sim_state.rs
crates/verbs_rs/: Cargo.toml
crates/verbs_rs/examples/basic_sim/: main.rs  state.rs
crates/verbs_rs/examples/forked_sim/: main.rs
crates/verbs_rs/src/: lib.rs  sim_runner.rs  utils.rs
crates/verbs_rs/src/agent/: agent_vec.rs  mod.rs  singleton_agent.rs  traits.rs
crates/verbs_rs/src/contract/: mod.rs  structs.rs
crates/verbs_rs/src/db/: fork_db.rs  local_db.rs  mod.rs  traits.rs  types.rs
crates/verbs_rs/src/env/: mod.rs  utils.rs  validator.rs
docs/python/source/: conf.py  index.rst
docs/python/source/pages/: abi.rst  api.rst  basic_sim_example.rst  batch_runner_example.rst  events.rst  examples.rst  getting_started.rst  model.rst  simulation_environment.rst  user_guide.rst
examples/: basic_sim.py  batch_runner.py
examples/aave/: calls.rs  deployment.rs  main.rs  protocol_deployment.rs
examples/aave/agents/: borrow_agent.rs  liquidation_agent.rs  mod.rs  price_admin_agent.rs
examples/aave/contracts/erc20/: MintableERC20.abi  MintableERC20_A_params.json  MintableERC20_B_params.json
examples/basic_sim/: ecr20.rs  main.rs  simple_agent.rs
examples/basic_sim/basic_erc20_contract/: basic_erc20_params.json
fork_evm/: Cargo.toml
fork_evm/src/: backend.rs  cache.rs  constants.rs  error.rs  lib.rs  options.rs  opts.rs  provider.rs  snapshot.rs  types.rs  utils.rs
fork_evm/src/backend/: diagnostic.rs  error.rs  in_memory_db.rs  mod.rs  snapshot.rs
fork_evm/src/fork/: backend.rs  cache.rs  database.rs  init.rs  mod.rs  multi.rs  simple_backend.rs
fork_evm/src/sync_fork/: backend.rs  db.rs  mod.rs
lib_macros/: Cargo.toml
lib_macros/src/: lib.rs
lib_sim/: Cargo.toml
lib_sim/src/agent/: agent_set_vec.rs  agent_state.rs  mod.rs
lib_sim/src/network/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
py_examples/: basic_sim.py  batch_runner.py  erc20_contract.py
rust/: Cargo.toml
rust/src/: lib.rs  sim.rs  snapshot.rs  types.rs
rust/src/sim/: base_env.rs  empty_env.rs  fork_env.rs  interface_macro.rs  mod.rs  snapshot.rs
rust_sim/: Cargo.toml
rust_sim/examples/basic_sim/: main.rs  state.rs
rust_sim/examples/basic_sim/basic_erc20_contract/: basic_erc20_contract.sol
rust_sim/examples/forked_sim/: main.rs
rust_sim/src/: sim_runner.rs
rust_sim/src/agent/: agent_vec.rs  singleton_agent.rs  traits.rs
rust_sim/src/network/: mod.rs  utils.rs
scripts/: insert_pool_address.py  int_to_hex.py  process_contract.py  process_hardhat.py
src/: agent.rs  basic_sim.rs  conract.rs  lib.rs  main.rs  network.rs  sim_runner.rs  utils.rs
src/agent/: agent_set_vec.rs  agent_vec.rs  mod.rs  singleton_agent.rs  traits.rs
src/contract/: deployed_contract.rs  json_loader.rs  loader.rs  mod.rs  structs.rs
src/network/: mod.rs  utils.rs
src/tests/: simple_contract.sol
src/tests/test_empty_env/: test_env.py
src/verbs/: __init__.py  abi.py  batch_runner.py  sim.py  types.py  utils.py
tests/: conftest.py  simple_contract.sol  test.abi  test_abi.py  test_batch_runner.py  test_env.py  test_sim.py  test_snapshot.py  test_utils.py
tests/test_empty_env/: test_env.py
