[workspace]

members = [
    "crates/verbs_rs",
    "crates/verbs_macros",
    "rust"
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
license = "MIT"
authors = ["Jordan <jordan@simtopia.ai>", "Marc <marc@simtopia.ai>"]
description = "Ethereum Agent based simulation library"
readme = "README.md"
repository = "https://github.com/simtopia/verbs/"
keywords = ["agent-based-model", "abm", "simulation", "web3", "ethereum"]
categories = ["simulation", "finance", "science"]

[workspace.dependencies]
revm = { version="8.0.0", default-features = false, features = ["memory_limit", "optional_eip3607", "optional_block_gas_limit", "optional_no_base_fee", "arbitrary"]}
alloy-primitives = "0.7.0"
alloy-sol-types = { version="0.7.0", features=["json"]}

ethereum-types = "0.14.1"
ethers-core = { version = "2.0.10", default-features = false }
ethers-providers = "2.0.10"
ethers-middleware = "2.0.10"

hex = "0.4.3"
tokio = "1.33.0"
futures = "0.3"

rand_xoshiro = "0.6.0"
rand = "0.8.5"
