[tool.maturin]
module-name = "verbs._verbs"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "verbs"
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Jordan", email = "jordan@simtopia.ai" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "eth-utils >= 2.3.1",
  "eth-abi >= 4.2.1",
  "tqdm >= 4.66.1",
  "numpy >= 1.26.2",
  "eth-hash[pycryptodome] >= 0.5.2",
]

[tool.hatch.envs.dev]
dependencies = [
  "maturin >= 1.2.3",
  "pytest >= 7.4.2",
  "pre-commit >= 3.3.3",
  "patchelf >= 0.17.2.1; platform_system != 'Darwin'",
  "eth-hash[pycryptodome] >= 0.5.2",
]

[tool.hatch.envs.dev.scripts]
develop = "maturin develop --release"
lint = "pre-commit install && pre-commit run --all-files"
test = "maturin develop --release && pytest -v tests"
build = "maturin build --release"
examples = "maturin build --release && python py_examples/basic_sim.py"

[tool.hatch.envs.notebook]
dependencies = [
  "maturin >= 1.2.3",
  "patchelf >= 0.17.2.1",
  "jupyter >= 1.0.0",
  "matplotlib >= 3.8.2",
]

[tool.hatch.envs.notebook.scripts]
jupyter = "maturin develop --release && jupyter notebook --notebook-dir=./py_examples"

[tool.hatch.envs.sphinx]
dependencies = [
  "sphinx >= 7.2.6",
  "sphinx-material >= 0.0.36",
]

[tool.hatch.envs.sphinx.scripts]
build = "sphinx-build -M html docs/python/source docs/python/build"

[project.urls]
Source = "https://github.com/simtopia/rusty_venture"
