[tool.maturin]
module-name = "verbs.envs"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "verbs"
version = "0.2.1"
description = "Ethereum ABM Library"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ethereum", "agent-based modelling", "simulation", "defi"]
authors = [
  { name = "Jordan", email = "jordan@simtopia.ai" },
  { name = "Marc", email = "marc@simtopia.ai"}
]
maintainers = [
  { name = "Jordan", email = "jordan@simtopia.ai" },
  { name = "Marc", email = "marc@simtopia.ai"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "eth-utils >= 2.3.1",
  "eth-abi >= 4.2.1",
  "tqdm >= 4.66.1",
  "numpy >= 1.26.2",
  "eth-hash[pycryptodome] >= 0.5.2",
  "joblib >= 1.3.2",
  "py-solc-x >= 2.0.2",
  "pandas >= 2.2.0",
]

[tool.hatch.envs.dev]
dependencies = [
  "maturin >= 1.2.3",
  "pytest >= 7.4.2",
  "pre-commit >= 3.3.3",
  "patchelf >= 0.17.2.1; platform_system != 'Darwin'",
]

[tool.hatch.envs.dev.scripts]
develop = "maturin develop --release"
lint = "pre-commit install && pre-commit run --all-files"
test = "maturin develop --release && pytest -v tests"
build = "maturin build --release"
examples = "maturin build --release && python examples/basic_sim.py && python examples/batch_runner.py"

[tool.hatch.envs.notebook]
dependencies = [
  "maturin >= 1.2.3",
  "patchelf >= 0.17.2.1; platform_system != 'Darwin'",
  "jupyter >= 1.0.0",
  "matplotlib >= 3.8.2",
]

[tool.hatch.envs.notebook.scripts]
jupyter = "maturin develop --release && jupyter notebook --notebook-dir=./examples"

[tool.hatch.envs.sphinx]
dependencies = [
  "maturin >= 1.2.3",
  "patchelf >= 0.17.2.1; platform_system != 'Darwin'",
  "sphinx >= 7.2.6",
  "furo >= 2023.9.10",
  "sphinx-copybutton >= 0.5.2",
]

[tool.hatch.envs.sphinx.scripts]
build = "maturin develop && sphinx-build -M html docs/python/source docs/python/build"
intersphinx = "python -m sphinx.ext.intersphinx https://docs.python.org/3/objects.inv"

[project.urls]
docs = "https://simtopia.github.io/verbs/"
documentation = "https://simtopia.github.io/verbs/"
source = "https://github.com/simtopia/verbs"
