[package]
name = "fork-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
# foundry-compilers = { git = "https://github.com/foundry-rs/compilers" }
# solang-parser = "0.3.2"

revm = { version="3.5.0", default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
] }
alloy-primitives = "0.4.2"
alloy-sol-types = { version="0.4.2", features=["json"]}
alloy-json-abi = "0.4.2"

ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
ethers-addressbook = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "841ff8c47980798fbb47991e047f8481b1d5eb39" }

# Encoding/decoding
serde_json = "1"
serde = "1"
hex = "0.4.3"

# Error handling
eyre = "0.6"
thiserror = "1"

# Logging
tracing = "0.1"

# Threading/futures
tokio = { version = "1", features = ["time", "macros"] }
parking_lot = "0.12"
futures = "0.3"
# once_cell = "1"

# Misc
url = "2"
auto_impl = "1"
itertools = "0.11.0"
async-trait = "0.1.74"
reqwest = "0.11.22"
openssl = { version = "0.10", features = ["vendored"] }
