[package]
name = "fork-evm"
version = "0.1.0"
edition = "2021"

[dependencies]

revm = { version="3.5.0", default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
    "arbitrary",
] }
alloy-primitives = "0.4.2"
alloy-sol-types = { version="0.4.2", features=["json"]}
alloy-json-abi = "0.4.2"

ethers = "2.0.10"
ethers-core = "2.0.10"
ethers-providers = "2.0.10"
ethers-middleware = "2.0.10"

# Encoding/decoding
serde_json = "1"
serde = "1"
hex = "0.4.3"

# Error handling
eyre = "0.6"
thiserror = "1"

# Logging
tracing = "0.1"

# Threading/futures
tokio = "1.33.0"
parking_lot = "0.12"
futures = "0.3"

# Misc
url = "2"
auto_impl = "1"
itertools = "0.11.0"
async-trait = "0.1.74"
reqwest = "0.11.22"
openssl = { version = "0.10", features = ["vendored"] }
