[package]
name = "verbs"
version = "0.1.0"
edition = "2021"

[lib]
name = "verbs"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
revm.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
fastrand.workspace = true

pyo3 = { version="0.20.0", features = ["extension-module"] }

rust_sim = { path = "../core/rust_sim" }
db = { path = "../core/db" }
