[package]
name = "verbs"
version = "0.1.0"
edition = "2021"

[lib]
name = "verbs"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
revm.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
rand_xoshiro.workspace = true
rand.workspace = true

pyo3 = { version="0.20.3", features = ["extension-module"] }

verbs-rs = { path = "../crates/verbs_rs" }
