[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
revm = { workspace = true, features = ["std", "serde"] }

alloy-primitives.workspace = true
alloy-sol-types.workspace = true

ethers-core.workspace = true
ethers-providers.workspace = true
ethers-middleware.workspace = true

# Encoding/decoding
serde_json = "1"
serde = "1"
hex.workspace = true

# Error handling
eyre = "0.6"
thiserror = "1"

# Threading/futures
tokio.workspace = true
futures.workspace = true

# Misc
url = "2"
itertools = "0.11.0"
async-trait = "0.1.74"
reqwest = { version = "0.11.22", default-features = false }
