[package]
name = "verbs-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Macros for VERBS Ethereuem simulation library"
readme = "../../README.md"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
