[package]
name = "verbs-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme = "../../README.md"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
revm = { workspace = true, features = ["ethersdb", "std", "serde"] }

alloy-primitives.workspace = true
alloy-sol-types.workspace = true
ethereum-types.workspace = true

# TODO: These should be changed out for alloy
ethers-core.workspace = true
ethers-providers.workspace = true

hex.workspace = true
tokio.workspace = true
futures.workspace = true

rand_xoshiro.workspace = true
rand.workspace = true

kdam = "0.5.1"
log = "0.4.19"

verbs-macros = { path="../verbs_macros", version = "0.4.0"}

# Encoding/decoding
serde_json = "1"
serde = "1"

# Error handling
eyre = "0.6"
thiserror = "1"

url = "2"
itertools = "0.12.1"
async-trait = "0.1.74"
reqwest = { version = "0.11.22", default-features = false }


[dev-dependencies]
assert_approx_eq = "1.1.0"
rstest = "0.18.2"
clap = { version = "4.5.1", features = ["derive"] }
